--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@11ty/eleventy": "^3.1.2",
     "@11ty/eleventy-img": "^6.0.4",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.1",
-    "markdown-it": "^14.1.0"
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0"
   },
   "browserslist": {
     "production": [
